# boomerang-score

./: API_CHANGE.md  BUGFIX.md  CLAUDE.md  COMPLETED.md  README.md  REFACTORING.md  RESUME.md  pyproject.toml  rss33_tc_scoresheet.py
.claude/commands/: gui-audit.md  lint.md  setup-precommit.md  test.md  update-docs.md
.github/workflows/: build-executables.yml  ci.yml  release.yml
docs/: _config.yml  api.md  architecture.md  contributing.md  getting-started.md  index.md  scoring-rules.md
src/boomerang_score/: __main__.py  cli.py
src/boomerang_score/app/: __init__.py  adapter.py  rss_boomerang.py  rss_boomerang_old.py
src/boomerang_score/app/components/: __init__.py  discipline_panel.py  input_panel.py  menu_bar.py  table_view.py
src/boomerang_score/core/: __init__.py  constants.py  models.py  scorer.py
src/boomerang_score/services/: __init__.py  competition_service.py  export_service.py  individual_pdf_exporter.py  participant_report_page.py  persistence.py
test/: conftest.py
test/core/: test_models.py  test_scoring.py
test/manual_tests/: test_generate_pdf_report.py
test/services/: test_competition_service.py  test_export_service.py  test_persistence.py
