[project]
name = "boomerang_score"
version = "0.2.0.dev2"
description = "scoring boomerang tournaments"
authors = [
    { name = "Klaus Haebe", email = "" },
    { name = "Andrea SGATTONI", email = "andrea.sgattoi@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10,<3.14"  # Using system Python 3.10 for proper Tk/fontconfig support
dependencies = [
    "python-docx>=1.2.0",
    "reportlab>=4.4.10",
]

# LINKS

[project.urls]
Homepage = "https://github.com/sgatto/boomerang-score"
Repository = "https://github.com/sgatto/boomerang-score"


[project.scripts]
boomerang-score = 'boomerang_score.__main__:main'

[tool.hatch.build.targets.wheel]
packages = ["src/boomerang_score"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pyinstaller>=6.0.0",
]

